--- a/backEnd/CadastroDeVisitantes/CadastroDeVisitantes/Web.config
+++ b/backEnd/CadastroDeVisitantes/CadastroDeVisitantes/Web.config
@@ -30,7 +30,7 @@ that is bundled with the nuget package under the tools folder.
     </handlers>
     <httpProtocol>
       <customHeaders>
-        <add name="Access-Control-Allow-Origin" value="*" />
+        <!--<add name="Access-Control-Allow-Origin" value="*" />-->
         <add name="Access-Control-Allow-Headers" value="Content-Type, Authorization, Accept, X-Requested-With" />
         <add name="Access-Control-Allow-Methods" value="OPTIONS, TRACE, GET, HEAD, POST, PUT" />
       </customHeaders>
@@ -70,6 +70,10 @@ that is bundled with the nuget package under the tools folder.
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Cors" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
@@ -79,8 +83,7 @@ that is bundled with the nuget package under the tools folder.
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="Default" providerName="System.Data.SqlClient"
-         connectionString="Data Source=LAPTOP-RG5S275I;Database=CadastroVistantes;Integrated Security=SSPI;" />
-  </connectionStrings>
+				<add name="CadastroDeVisitantes" providerName="System.Data.SqlClient" connectionString="Data Source=tcp:cadastrodevisitantes.database.windows.net,1433;Database=CadastroDeVisitantes;User Id=cadastrodevisitantes;Password=projeto@WEB;" />
+			</connectionStrings>
 
 </configuration>
