--- a/backEnd/CadastroDeVisitantes/CadastroDeVisitantes/Web.config
+++ b/backEnd/CadastroDeVisitantes/CadastroDeVisitantes/Web.config
@@ -83,7 +83,8 @@ that is bundled with the nuget package under the tools folder.
     </compilers>
   </system.codedom>
   <connectionStrings>
-				<add name="CadastroDeVisitantes" providerName="System.Data.SqlClient" connectionString="Data Source=tcp:cadastrodevisitantes.database.windows.net,1433;Database=CadastroDeVisitantes;User Id=cadastrodevisitantes;Password=projeto@WEB;" />
+				<add name="CadastroDeVisitantes" providerName="System.Data.SqlClient" 
+             connectionString="Data Source=tcp:cadastrodevisitantes.database.windows.net,1433;Database=CadastroDeVisitantes;User Id=cadastrodevisitantes;Password=projeto@WEB;" />
 			</connectionStrings>
 
 </configuration>
