--- a/backEnd/CadastroDeVisitantes/CadastroDeVisitantes/Web.config
+++ b/backEnd/CadastroDeVisitantes/CadastroDeVisitantes/Web.config
@@ -20,6 +20,7 @@ that is bundled with the nuget package under the tools folder.
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+    <authentication mode="Forms" />
   </system.web>
   <system.webServer>
     <handlers>
