--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ backEnd/CadastroDeVisitantes/.vs/
 backEnd/CadastroDeVisitantes/CadastroDeVisitantes/obj/
 
 backEnd/CadastroDeVisitantes/CadastroDeVisitantes/bin/
+
+backEnd/CadastroDeVisitantes/CadastroDeVisitantes.Common/bin/
