--- a/backEnd/CadastroDeVisitantes/CadastroDeVisitantes/CadastroDeVisitantes.csproj
+++ b/backEnd/CadastroDeVisitantes/CadastroDeVisitantes/CadastroDeVisitantes.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\ClienteController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Models\CadastroPessoaViewModel.cs" />
     <Compile Include="Models\CadastroVeiculoViewModel.cs" />
