--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ backEnd/CadastroDeVisitantes/CadastroDeVisitantes/obj/
 backEnd/CadastroDeVisitantes/CadastroDeVisitantes/bin/
 
 backEnd/CadastroDeVisitantes/.vs/
+
+backEnd/CadastroDeVisitantes/CadastroDeVisitantes.Core/bin/
