--- a/backEnd/CadastroDeVisitantes/CadastroDeVisitantes/CadastroDeVisitantes.csproj
+++ b/backEnd/CadastroDeVisitantes/CadastroDeVisitantes/CadastroDeVisitantes.csproj
@@ -195,8 +195,10 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
-    <Compile Include="Controllers\ClienteController.cs" />
+    <Compile Include="Controllers\UsuarioController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Controllers\VisitaController.cs" />
     <Compile Include="Models\CadastroPessoaViewModel.cs" />
     <Compile Include="Models\CadastroVeiculoViewModel.cs" />
     <Compile Include="Models\DashboardViewModel.cs" />
